# Simpler-RNN---Imdb-sentiment-class

./: .gitignore  README.md  app.py  embedding.ipynb  main.py  predictive_function.ipynb  pyproject.toml  simplernn.ipynb
logs/fit/20250422-195115/train/: events.out.tfevents.1745362377.DESKTOP-OUAPUEF.27056.0.v2
logs/fit/20250422-195115/validation/: events.out.tfevents.1745362449.DESKTOP-OUAPUEF.27056.1.v2
logs/fit/20250422-205034/train/: events.out.tfevents.1745365834.DESKTOP-OUAPUEF.27928.0.v2
logs/fit/20250422-205034/validation/: events.out.tfevents.1745365869.DESKTOP-OUAPUEF.27928.1.v2
logs/fit/20250422-210839/train/: events.out.tfevents.1745366919.DESKTOP-OUAPUEF.28056.0.v2
logs/fit/20250422-210839/validation/: events.out.tfevents.1745366960.DESKTOP-OUAPUEF.28056.1.v2
logs/fit/20250422-211958/train/: events.out.tfevents.1745367598.DESKTOP-OUAPUEF.27636.0.v2
logs/fit/20250422-211958/validation/: events.out.tfevents.1745367653.DESKTOP-OUAPUEF.27636.1.v2
logs/fit/20250422-213700/train/: events.out.tfevents.1745368620.DESKTOP-OUAPUEF.27600.0.v2
logs/fit/20250422-213700/validation/: events.out.tfevents.1745368653.DESKTOP-OUAPUEF.27600.1.v2
logs/fit/20250422-214537/train/: events.out.tfevents.1745369137.DESKTOP-OUAPUEF.29832.0.v2
logs/fit/20250422-214537/validation/: events.out.tfevents.1745369171.DESKTOP-OUAPUEF.29832.1.v2
pickle/: embedded_docs.joblib  model_embedding.h5
