[project]
name = "04-02-deep-learning-4-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "keras>=3.9.2",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.5",
    "streamlit>=1.44.1",
    "tensorflow>=2.19.0",
]
